using UnityEngine;public static class AnimParametersMap{	public static readonly int HorizontalSpeed = -1118621987;	public static readonly int VerticalSpeed = -1148172834;	public static readonly int isJumping = -357477766;	public static readonly int isAttacking = 973584577;	public static readonly int isDamaging = 1579678756;	public static readonly int isDead = 1276664872;	public static readonly int FadeOut = 1739810581;}