using System;using HECSFramework.Serialize;namespace Commands{	[Serializable]	public struct SetPlayerControllerAnimatorState : ISetAnimatorState	{		public FloatId HorizontalSpeed;		public BoolId isJumping;		public FloatId VerticalSpeed;		public void SetState(AnimatorState animatorState)		{			animatorState.SetFloat(HorizontalSpeed.Id, HorizontalSpeed.Value);			animatorState.SetBool(isJumping.Id, isJumping.Value);			animatorState.SetFloat(VerticalSpeed.Id, VerticalSpeed.Value);		}	}}